ELS Code/main/default/objects/Contact/fields/Sub_Originating_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Originating_Source__c</fullName>
    <label>Sub Originating Source</label>
    <length>225</length>
    <type>Text</type>
</CustomField>