ELS Code/main/default/objects/Contact/fields/Sync_with_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Sync_with_Pardot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the record meets the criteria to sync to Pardot.  Checked means that the record will be visible to the connector user and sync.</description>
    <inlineHelpText>Indicates that the record meets the criteria to sync to Pardot</inlineHelpText>
    <label>Sync with Pardot</label>
    <type>Checkbox</type>
</CustomField>