ELS Code/main/default/objects/Contact/fields/Time_stamp_first_New_Rate_Class_Group__c.field-meta.xml
<CustomField>
    <fullName>Time_stamp_first_New_Rate_Class_Group__c</fullName>
    <inlineHelpText>Time stamp first New Rate Class Group</inlineHelpText>
    <label>Time stamp first New Rate Class Group</label>
    <type>DateTime</type>
</CustomField>