ELS Code/main/default/objects/Contact/fields/Time_stamp_first_property_type__c.field-meta.xml
<CustomField>
    <fullName>Time_stamp_first_property_type__c</fullName>
    <inlineHelpText>Time stamp first property type</inlineHelpText>
    <label>Time stamp first property type</label>
    <type>DateTime</type>
</CustomField>