ELS Code/main/default/objects/Contact/fields/Total_Transient_Trips__c.field-meta.xml
<CustomField>
    <fullName>Total_Transient_Trips__c</fullName>
    <label>Total Transient Trips</label>
    <summaryFilterItems>
        <field>Reservation__c.Transient__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Reservation__c.Cancelled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Reservation__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>