ELS Code/main/default/objects/Contact/fields/Tradeshow_Count__c.field-meta.xml
<CustomField>
    <fullName>Tradeshow_Count__c</fullName>
    <label>Tradeshows (Last 12 Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>