ELS Code/main/default/objects/Contact/fields/Trails_Collection_Add_Date__c.field-meta.xml
<CustomField>
    <fullName>Trails_Collection_Add_Date__c</fullName>
    <label>Trails Collection Add Date</label>
    <type>Date</type>
</CustomField>