ELS Code/main/default/objects/Contact/fields/Trails_Collection_AddDate_History__c.field-meta.xml
<CustomField>
    <fullName>Trails_Collection_AddDate_History__c</fullName>
    <label>Trails Collection AddDate History</label>
    <length>225</length>
    <type>Text</type>
</CustomField>