ELS Code/main/default/objects/Contact/fields/Vendor_Subgroup__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Subgroup__c</fullName>
    <label>Vendor Subgroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>