ELS Code/main/default/objects/Contact/fields/X1st_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Booking_Date__c</fullName>
    <label>1st Booking Date by automation</label>
    <type>Date</type>
</CustomField>