ELS Code/main/default/objects/Contact/fields/X1st_New_Rate_Class_Group__c.field-meta.xml
<CustomField>
    <fullName>X1st_New_Rate_Class_Group__c</fullName>
    <label>1st New Rate Class Group by automation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>Transient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>