ELS Code/main/default/objects/Contact/fields/X1st_Property_Stay__c.field-meta.xml
<CustomField>
    <fullName>X1st_Property_Stay__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1st Property Stay by automation</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Contacts (1st Property Stay)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>