ELS Code/main/default/objects/Contact/fields/X1st_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>X1st_Property_Type__c</fullName>
    <label>1st Property Type by automation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>